--- a/dev/application.yaml
+++ b/dev/application.yaml
@@ -16,10 +16,9 @@ spec:
     namespace: myapp
 
 
-  synchPolicy:
-    synchOption:
+  syncPolicy:
+    syncOptions:
     - CreateNamespace=true
-
 
     automated:
       selfHeal: true
