--- a/dev/application.yaml
+++ b/dev/application.yaml
@@ -16,10 +16,10 @@ spec:
     namespace: myapp
 
 
-  syncPolicy:
-    syncOptions:
-    - CreateNamespace=true
+      #  syncPolicy:
+    #syncOptions:
+    # - CreateNamespace=true
 
-    automated:
-      selfHeal: true
-      prune: true
+      # automated:
+    # selfHeal: true
+    # prune: true
