--- a/dev/application.yaml
+++ b/dev/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: myapp-argo-application
+  name: myapp-argo-application1
   namespace: argocd
 spec:
   project: default
@@ -13,7 +13,7 @@ spec:
     path: dev
   destination:
     server: https://kubernetes.default.svc
-    namespace: myapp
+    namespace: myapp1
 
 
       #  syncPolicy:
