--- a/dev/application.yaml
+++ b/dev/application.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: myapp-argo-application1
+  name: myapp-argo-application2
   namespace: argocd
 spec:
   project: default
 
 
   source:
-    repoURL: https://gitlab.com/nanuchi/argocd-app-config.git
+    repoURL: https://github.com/Chetancloud/argoCD
     targetRevision: HEAD
     path: dev
   destination:
@@ -16,10 +16,10 @@ spec:
     namespace: myapp
 
 
-      #  syncPolicy:
-    #syncOptions:
-    # - CreateNamespace=true
+  syncPolicy:
+    syncOptions:
+    - CreateNamespace=true
 
-      # automated:
-    # selfHeal: true
-    # prune: true
+    automated:
+      selfHeal: true
+      prune: true
