adding app file

--- a/application.yaml
+++ b/application.yaml
@@ -2,17 +2,16 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: myapp-argo-application
-  namespace: argocd
+  namespace: argocdchetan
 spec:
   project: default
 
   source:
-    repoURL: https://gitlab.com/nanuchi/argocd-app-config.git
+    repoURL: https://github.com/Chetancloud/argoCD
     targetRevision: HEAD
-    path: dev
   destination: 
     server: https://kubernetes.default.svc
-    namespace: myapp
+    namespace: myapp1
 
   syncPolicy:
     syncOptions:
