updating application.yaml file

--- a/application.yaml
+++ b/application.yaml
@@ -2,32 +2,16 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: myapp-argo-application
-<<<<<<< HEAD
-<<<<<<< HEAD
   namespace: argocdchetan
-=======
-  namespace: argocdibm
->>>>>>> a7f258f (adding application.yaml file)
-=======
-  namespace: argocdchetan
->>>>>>> d5bd16b (adding app file for arfocdchetan namespace)
 spec:
   project: default
 
   source:
     repoURL: https://github.com/Chetancloud/argoCD
     targetRevision: HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-  destination: 
-=======
-=======
-    path: dev
->>>>>>> d5bd16b (adding app file for arfocdchetan namespace)
   destination:
->>>>>>> a7f258f (adding application.yaml file)
     server: https://kubernetes.default.svc
-    namespace: argocdmyapp
+    namespace: myapp1
 
   syncPolicy:
     syncOptions:
@@ -36,3 +20,5 @@ spec:
     automated:
       selfHeal: true
       prune: true
+
+
