--- a/application.yaml
+++ b/application.yaml
@@ -9,6 +9,7 @@ spec:
   source:
     repoURL: https://github.com/Chetancloud/argoCD
     targetRevision: HEAD
+    path: dev
   destination:
     server: https://kubernetes.default.svc
     namespace: myapp1
