--- a/application.yaml
+++ b/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: myapp-argo-application
+  name: chetan-argo-application
   namespace: argocdchetan
 spec:
   project: default
@@ -12,7 +12,7 @@ spec:
     path: dev
   destination:
     server: https://kubernetes.default.svc
-    namespace: myapp1
+    namespace: myapp2
 
   syncPolicy:
     syncOptions:
