--- a/application.yaml
+++ b/application.yaml
@@ -1,18 +1,18 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: chetan-argo-application
-  namespace: argocdchetan
+  name: myapp-argo-application1
+  namespace: argocd
 spec:
   project: default
 
   source:
-    repoURL: https://github.com/Chetancloud/argoCD.git
+    repoURL: https://github.com/nanuchi/argocd-app-config.git
     targetRevision: HEAD
     path: dev
   destination:
     server: https://kubernetes.default.svc
-    namespace: myapp2
+    namespace: myapp
 
   syncPolicy:
     syncOptions:
