--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp2-deployment
+  name: myapp-deployment
 spec:
   selector:
     matchLabels:
-      app: myapp2
+      app: myapp
   replicas: 2
   template:
     metadata:
       labels:
-        app: myapp2
+        app: myapp
     spec:
       containers:
-      - name: myapp2
-        image: nanajanashia/argocd-app:1.2
+      - name: myapp
+        image: nanajanashia/argocd-app:1.1
         ports:
         - containerPort: 8080
 
