--- a/service.yaml
+++ b/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: myapp2-service
+  name: myapp-service
 spec:
   selector:
-    app: myapp2
+    app: myapp
   ports:
   - port: 8080
     protocol: TCP
